<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_display_daltonizer_preference_subtitle">This feature is experimental and may affect performance.</string>
    <string name="accessibility_display_daltonizer_preference_title">Color correction</string>
    <string name="accessibility_manual_zen_less_time">Less time.</string>
    <string name="accessibility_manual_zen_more_time">More time.</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_settings_activity_title">Accessibility</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_security_type_none">Open network</string>
    <string name="accessibility_wifi_security_type_secured">Secure network</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="actionBarCBVideo">Video call barring (%s)</string>
    <string name="actionBarCBVoice">Voice call barring (%s)</string>
    <string name="actionBarCFVideo">Video call forwarding (%s)</string>
    <string name="actionBarCFVoice">Voice call forwarding (%s)</string>
    <string name="active_input_method_subtypes">Active input methods</string>
    <string name="adb_keys_warning_message">Revoke access to USB debugging from all computers you’ve previously authorized?</string>
    <string name="adb_warning_message">USB debugging is intended for development purposes only. Use it to copy data between your computer and your device, install apps on your device without notification, and read log data.</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="auto_retry_mode_summary">Enable Auto-retry mode</string>
    <string name="auto_retry_mode_title">Auto-retry</string>
    <string name="badPin">The old PIN you typed isn\'t correct. Try again.</string>
    <string name="call_barring_baic">All incoming</string>
    <string name="call_barring_baic_disabled">Block all incoming calls?</string>
    <string name="call_barring_baic_enabled">Disable blocking of all incoming calls?</string>
    <string name="call_barring_baicr">Incoming international roaming</string>
    <string name="call_barring_baicr_disabled">Block incoming international roaming?</string>
    <string name="call_barring_baicr_enabled">Disable blocking of all incoming international roaming?</string>
    <string name="call_barring_baoc">All outgoing</string>
    <string name="call_barring_baoc_disabled">Block all outgoing calls?</string>
    <string name="call_barring_baoc_enabled">Disable blocking of all outgoing calls?</string>
    <string name="call_barring_baoic">Outgoing international</string>
    <string name="call_barring_baoic_disabled">Block outgoing international calls?</string>
    <string name="call_barring_baoic_enabled">Disable blocking of outgoing international calls?</string>
    <string name="call_barring_baoicr">Outgoing international roaming</string>
    <string name="call_barring_baoicr_disabled">Block outgoing international roaming?</string>
    <string name="call_barring_baoicr_enabled">Disable blocking of outgoing international roaming?</string>
    <string name="call_barring_change_pwd">Change password</string>
    <string name="call_barring_change_pwd_description">Change call barring password</string>
    <string name="call_barring_deactivate_all">Deactivate all</string>
    <string name="call_barring_deactivate_all_description">Deactivate all call barring settings</string>
    <string name="call_barring_settings">Call barring settings</string>
    <string name="call_category">Calling</string>
    <string name="call_settings">Call settings</string>
    <string name="cancel">Cancel</string>
    <string name="carrier_settings" />
    <string name="carrier_settings_euicc">Carrier</string>
    <string name="carrier_settings_menu" />
    <string name="carrier_settings_title">Carrier settings</string>
    <string name="cdma_lte_data_service">Set up data service</string>
    <string name="choose_network_title">Choose network</string>
    <string name="confirmPinLabel">Confirm new PIN</string>
    <string name="data_roaming_alert">Data roaming alert</string>
    <string name="data_usage_title">App data usage</string>
    <string name="disable">Turn off</string>
    <string name="domestic_data_roaming">Data Roaming</string>
    <string name="domestic_data_roaming_summary">Connect to data services when roaming</string>
    <string name="domestic_roaming_alert">Domestic Roaming Alerts</string>
    <string name="domestic_roaming_title">Domestic roaming</string>
    <string name="domestic_voice_and_text_roaming">Voice &amp; text roaming</string>
    <string name="domestic_voice_text_roam_summary">Make/receive voice call and send/receive text messages when roaming</string>
    <string name="doneButton">Done</string>
    <string name="dual_mic_summary">Suppress your background noise during calls</string>
    <string name="dual_mic_title">Noise Reduction</string>
    <string name="enable">Turn on</string>
    <string name="enable_video_calling_title">Turn on video calling</string>
    <string name="enhanced_4g_lte_mode_summary">Use LTE services to improve voice and other communications (recommended)</string>
    <string name="enhanced_4g_lte_mode_title">Enhanced 4G LTE Mode</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="international_data_roaming">International data roaming</string>
    <string name="international_data_roaming_summary">Connect to data services when roaming internationally. Requires international voice roaming plan. Faster data speeds may available for purchase.</string>
    <string name="international_roaming">International roaming</string>
    <string name="international_roaming_alert">International Roam Alerts</string>
    <string name="international_voice_and_text_roaming">International voice &amp; text roaming</string>
    <string name="international_voice_text_roam_summary">Make/receive voice call and send/receive text messages when roaming internationally</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="label_puk2_code">Enter PUK2 code</string>
    <string name="messageCFU">Always use this number</string>
    <string name="mismatchPin">The PINs you typed don\'t match. Try again.</string>
    <string name="mobile_data_settings_summary">Access data using mobile network</string>
    <string name="mobile_data_settings_title">Mobile data</string>
    <string name="name">Name</string>
    <string name="network_operator_category">Network</string>
    <string name="network_select_title">Network</string>
    <string name="newPinLabel">New PIN</string>
    <string name="number">Number</string>
    <string name="oldPinLabel">Old PIN</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network type</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_title">Preferred network type</string>
    <string name="roaming">Roaming</string>
    <string name="roaming_disable">Connect to data services when roaming</string>
    <string name="roaming_enable">Connect to data services when roaming</string>
    <string name="rtt_mode_more_information">RTT assists callers who are deaf, hard of hearing, have a speech disability, or need more than voice alone.&lt;br&gt; &lt;a href=http://support.google.com/mobile?p=telephony_rtt&gt;Learn more&lt;/a&gt; &lt;br&gt;&lt;br&gt; - RTT calls are saved as a message transcript &lt;br&gt; - RTT is not available for video calls</string>
    <string name="rtt_mode_summary">Allow messaging within a voice call</string>
    <string name="rtt_mode_title">Real-time text (RTT) call</string>
    <string name="save">Save</string>
    <string name="selectContact">select contact</string>
    <string name="select_automatically">Automatically select network</string>
    <string name="sum_call_barring_disabled">Off</string>
    <string name="sum_call_barring_enabled">On</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="tty_mode_key">button_tty_mode_key</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="video_calling_settings_title">Carrier video calling</string>
    <string name="voice_roaming_alert">Voice roaming alert</string>
    <string name="voicemail">Voicemail</string>
    <string name="wifi_calling">Wi-Fi calling</string>
    <string name="wifi_calling_settings_key">button_wifi_calling_settings_key</string>
    <string name="wifi_calling_settings_title">Wi-Fi calling</string>
</resources>