<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:phone="http://schemas.android.com/apk/res/com.android.phone" android:title="@string/call_barring_settings">
    <com.android.phone.CallBarringEditPreference
        android:persistent="false"
        android:singleLine="true"
        android:autoText="false"
        android:title="@string/call_barring_baoc"
        android:key="button_baoc_key"
        android:summaryOn="@string/sum_call_barring_enabled"
        android:summaryOff="@string/sum_call_barring_disabled"
        android:dialogTitle="@string/call_barring_baoc"
        phone:dialogMessageDisabledNoPwd="@string/call_barring_baoc_disabled"
        phone:dialogMessageEnabledNoPwd="@string/call_barring_baoc_enabled"
        phone:facility="AO"/>
    <com.android.phone.CallBarringEditPreference
        android:persistent="false"
        android:singleLine="true"
        android:autoText="false"
        android:title="@string/call_barring_baoic"
        android:key="button_baoic_key"
        android:dependency="button_baoc_key"
        android:summaryOn="@string/sum_call_barring_enabled"
        android:summaryOff="@string/sum_call_barring_disabled"
        android:dialogTitle="@string/call_barring_baoic"
        phone:dialogMessageDisabledNoPwd="@string/call_barring_baoic_disabled"
        phone:dialogMessageEnabledNoPwd="@string/call_barring_baoic_enabled"
        phone:facility="OI"/>
    <com.android.phone.CallBarringEditPreference
        android:persistent="false"
        android:singleLine="true"
        android:autoText="false"
        android:title="@string/call_barring_baoicr"
        android:key="button_baoicxh_key"
        android:dependency="button_baoc_key"
        android:summaryOn="@string/sum_call_barring_enabled"
        android:summaryOff="@string/sum_call_barring_disabled"
        android:dialogTitle="@string/call_barring_baoicr"
        phone:dialogMessageDisabledNoPwd="@string/call_barring_baoicr_disabled"
        phone:dialogMessageEnabledNoPwd="@string/call_barring_baoicr_enabled"
        phone:facility="OX"/>
    <com.android.phone.CallBarringEditPreference
        android:persistent="false"
        android:singleLine="true"
        android:autoText="false"
        android:title="@string/call_barring_baic"
        android:key="button_baic_key"
        android:summaryOn="@string/sum_call_barring_enabled"
        android:summaryOff="@string/sum_call_barring_disabled"
        android:dialogTitle="@string/call_barring_baic"
        phone:dialogMessageDisabledNoPwd="@string/call_barring_baic_disabled"
        phone:dialogMessageEnabledNoPwd="@string/call_barring_baic_enabled"
        phone:facility="AI"/>
    <com.android.phone.CallBarringEditPreference
        android:persistent="false"
        android:singleLine="true"
        android:autoText="false"
        android:title="@string/call_barring_baicr"
        android:key="button_baicr_key"
        android:dependency="button_baic_key"
        android:summaryOn="@string/sum_call_barring_enabled"
        android:summaryOff="@string/sum_call_barring_disabled"
        android:dialogTitle="@string/call_barring_baicr"
        phone:dialogMessageDisabledNoPwd="@string/call_barring_baicr_disabled"
        phone:dialogMessageEnabledNoPwd="@string/call_barring_baicr_enabled"
        phone:facility="IR"/>
    <com.android.phone.CallBarringDeselectAllPreference
        android:persistent="false"
        android:title="@string/call_barring_deactivate_all"
        android:key="button_ba_all_key"
        android:summary="@string/call_barring_deactivate_all_description"
        android:dialogTitle="@string/call_barring_deactivate_all"/>
    <com.android.phone.settings.fdn.EditPinPreference
        android:persistent="false"
        android:title="@string/call_barring_change_pwd"
        android:key="button_change_pw_key"
        android:summary="@string/call_barring_change_pwd_description"
        android:dialogTitle="@string/call_barring_change_pwd"/>
</PreferenceScreen>
