<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:title="@string/cdma_lte_data_service"
        android:key="cdma_lte_data_service_key"/>
    <com.android.phone.MobileDataPreference
        android:title="@string/mobile_data_settings_title"
        android:key="mobile_data_enable"
        android:summary="@string/mobile_data_settings_summary"/>
    <com.android.phone.RestrictedSwitchPreference
        android:persistent="false"
        android:title="@string/roaming"
        android:key="button_roaming_key"
        android:summaryOn="@string/roaming_enable"
        android:summaryOff="@string/roaming_disable"/>
    <com.android.phone.DataUsagePreference
        android:title="@string/data_usage_title"
        android:key="data_usage_summary"/>
    <com.android.phone.AdvancedOptionsPreference android:key="advanced_options"/>
    <SwitchPreference
        android:persistent="false"
        android:title="@string/enhanced_4g_lte_mode_title"
        android:key="enhanced_4g_lte"
        android:summary="@string/enhanced_4g_lte_mode_summary"/>
    <ListPreference
        android:entries="@array/preferred_network_mode_choices"
        android:title="@string/preferred_network_mode_title"
        android:key="preferred_network_mode_key"
        android:summary="@string/preferred_network_mode_summary"
        android:dialogTitle="@string/preferred_network_mode_dialogtitle"
        android:entryValues="@array/preferred_network_mode_values"/>
    <ListPreference
        android:entries="@array/enabled_networks_choices"
        android:title="@string/preferred_network_mode_title"
        android:key="enabled_networks_key"
        android:summary="@string/preferred_network_mode_summary"
        android:dialogTitle="@string/preferred_network_mode_dialogtitle"
        android:entryValues="@array/enabled_networks_values"/>
    <Preference
        android:title="@string/carrier_settings_euicc"
        android:key="carrier_settings_euicc_key"/>
    <PreferenceCategory
        android:title="@string/call_category"
        android:key="calling">
        <PreferenceScreen
            android:title="@string/wifi_calling_settings_title"
            android:key="wifi_calling_key">
            <intent
                android:targetPackage="com.android.settings"
                android:action="android.intent.action.MAIN"
                android:targetClass="com.android.settings.Settings$WifiCallingSettingsActivity">
                <extra
                    android:name="show_drawer_menu"
                    android:value="true"/>
            </intent>
        </PreferenceScreen>
        <SwitchPreference
            android:persistent="true"
            android:title="@string/video_calling_settings_title"
            android:key="video_calling_key"/>
    </PreferenceCategory>
</PreferenceScreen>
