<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/domestic_roaming_title"
        android:key="domestic_roaming_settings">
        <com.mediatek.services.telephony.RoamingSwitchPreference
            android:title="@string/domestic_voice_and_text_roaming"
            android:key="domestic_voice_text_roaming_settings"
            android:summary="@string/domestic_voice_text_roam_summary"/>
        <com.mediatek.services.telephony.RoamingSwitchPreference
            android:title="@string/domestic_data_roaming"
            android:key="domestic_data_roaming_settings"
            android:summary="@string/domestic_data_roaming_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/international_roaming"
        android:key="interantional_roaming_settings">
        <com.mediatek.services.telephony.RoamingSwitchPreference
            android:title="@string/international_voice_and_text_roaming"
            android:key="international_voice_text_roaming_settings"
            android:summary="@string/international_voice_text_roam_summary"/>
        <com.mediatek.services.telephony.RoamingSwitchPreference
            android:title="@string/international_data_roaming"
            android:key="international_data_roaming_settings"
            android:summary="@string/international_data_roaming_summary"/>
    </PreferenceCategory>
</PreferenceScreen>
