<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:settings="http://schemas.android.com/apk/res/com.android.phone">
    <com.android.phone.NetworkOperators
        android:persistent="false"
        android:title="@string/network_operator_category"
        android:key="network_operators_category_key">
        <SwitchPreference
            android:persistent="false"
            android:title="@string/select_automatically"
            android:key="button_auto_select_key"/>
        <com.android.phone.NetworkSelectListPreference
            android:persistent="false"
            android:title="@string/network_select_title"
            android:key="button_network_select_key"/>
        <Preference
            android:title="@string/choose_network_title"
            android:key="button_choose_network_key"
            android:fragment="com.android.phone.NetworkSelectSetting"/>
    </com.android.phone.NetworkOperators>
    <PreferenceCategory
        android:layout="@layout/preference_category_no_label"
        android:key="category_gsm_apn_key">
        <com.android.phone.RestrictedPreference
            android:persistent="false"
            android:title="@string/apn_settings"
            android:key="button_gsm_apn_key"/>
    </PreferenceCategory>
    <PreferenceScreen
        android:title="@string/carrier_settings_title"
        android:key="carrier_settings_key">
        <intent
            android:targetPackage="@string/carrier_settings"
            android:action="android.intent.action.MAIN"
            android:targetClass="@string/carrier_settings_menu"/>
    </PreferenceScreen>
</PreferenceScreen>
