<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/domestic_roaming_alert"
        android:key="domestic_roaming_guard">
        <com.mediatek.services.telephony.RoamingSwitchPreference
            android:title="@string/voice_roaming_alert"
            android:key="domestic_voice_roaming_guard"/>
        <com.mediatek.services.telephony.RoamingSwitchPreference
            android:title="@string/data_roaming_alert"
            android:key="domestic_data_roaming_guard"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/international_roaming_alert"
        android:key="international_roaming_guard">
        <com.mediatek.services.telephony.RoamingSwitchPreference
            android:title="@string/voice_roaming_alert"
            android:key="international_voice_roaming_guard"
            android:defaultValue="true"/>
        <com.mediatek.services.telephony.RoamingSwitchPreference
            android:title="@string/data_roaming_alert"
            android:key="international_data_roaming_guard"/>
    </PreferenceCategory>
</PreferenceScreen>
