<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textColor="?android:attr/textColorPrimary"
        android:id="@+id/dialog_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messageCFU"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        style="?android:attr/textAppearanceMedium"/>
    <RadioGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        style="?android:attr/textAppearanceMedium">
        <RadioButton
            android:id="@+id/enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/enable"/>
        <RadioButton
            android:id="@+id/disable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disable"/>
    </RadioGroup>
    <LinearLayout
        android:gravity="end"
        android:orientation="horizontal"
        android:id="@+id/edit_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/EditNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:phoneNumber="true"
            android:layout_weight="1"/>
        <ImageButton
            android:id="@+id/select_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_contact_holo_dark"
            android:contentDescription="@string/selectContact"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="end"
        android:orientation="horizontal"
        android:id="@+id/edit_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
