<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            style="@style/info_layout">
            <TextView
                android:text="@string/oldPinLabel"
                style="@style/info_label"/>
            <EditText
                android:id="@+id/old_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:password="true"
                android:capitalize="none"
                android:autoText="false"/>
            <TextView
                android:textSize="12sp"
                android:textColor="#ff888888"
                android:id="@+id/bad_pin"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/badPin"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"/>
            <TextView
                android:text="@string/newPinLabel"
                style="@style/info_label"/>
            <EditText
                android:id="@+id/new_pin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:password="true"
                android:capitalize="none"
                android:autoText="false"/>
            <TextView
                android:text="@string/confirmPinLabel"
                style="@style/info_label"/>
            <EditText
                android:id="@+id/new_pin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:password="true"
                android:capitalize="none"
                android:autoText="false"/>
            <TextView
                android:textSize="12sp"
                android:textColor="#ff888888"
                android:id="@+id/mismatch"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mismatchPin"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"/>
            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doneButton"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/puk_panel"
        android:visibility="gone"
        style="@style/info_layout">
        <TextView
            android:text="@string/label_puk2_code"
            style="@style/info_label"/>
        <EditText
            android:id="@+id/puk_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:password="true"
            android:capitalize="none"
            android:autoText="false"/>
        <Button
            android:id="@+id/puk_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doneButton"/>
    </LinearLayout>
</RelativeLayout>
