<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/pinc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">
    <EditText
        android:id="@+id/fdn_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:capitalize="words"
        android:autoText="false"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"
        android:textAlignment="viewStart"/>
    <EditText
        android:id="@+id/fdn_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:capitalize="none"
        android:autoText="false"
        android:inputType="phone"
        android:imeOptions="actionDone"
        android:textAlignment="viewStart"/>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"/>
</LinearLayout>
